2009-07-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Disable gcov support in plug-in.
	* src/Makefile.am: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix a bug in CFSQP constraint handling.
	* src/roboptim-core-cfsqp-plugin.cc: Fix bug in CFSQP
	constraint handling.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix gradient check threshold.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Make gradient check a little less strict.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement copy constructor.
	* include/roboptim/core/plugin/cfsqp.hh,
	* src/roboptim-core-cfsqp-plugin.cc: Add copy constructor.

2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Add compilation option to check gradient automatically.
	* src/roboptim-core-cfsqp-plugin.cc: Add compilation option
	to check automatically the gradient.
	* tests/shared-tests: Update sub-module.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update bootstrap to handle submodules.
	* bootstrap: Handle submodules and check git version.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use to factorize build-aux, tests and documentation generation.
	* .gitmodules: New.
	* build-aux/autotest.at: Remove.
	* build-aux/autotest.mk: Remove.
	* build-aux/boost.m4: Remove.
	* build-aux/bootstrap: Remove.
	* build-aux/config.guess: Remove.
	* build-aux/config.sub: Remove.
	* build-aux/deb.mk: Remove.
	* build-aux/depcomp: Remove.
	* build-aux/doxygen.m4: Remove.
	* build-aux/ebuild.mk: Remove.
	* build-aux/init.mk: Remove.
	* build-aux/install-sh: Remove.
	* build-aux/libtool.m4: Remove.
	* build-aux/ltmain.sh: Remove.
	* build-aux/ltoptions.m4: Remove.
	* build-aux/ltsugar.m4: Remove.
	* build-aux/ltversion.m4: Remove.
	* build-aux/lt~obsolete.m4: Remove.
	* build-aux/missing: Remove.
	* build-aux/move-if-change: Remove.
	* build-aux/pkg-config.mk: Remove.